# ez-life-plantly

./: .gitignore  README.md  app.py  callbacks.py  config.py  coreapp.py  database.py  graphs.py  layout.py  memo.txt  pyproject.toml  record.txt  requirements.txt  sensor.py  settings.example.json  tempCodeRunnerFile.py  weather.db  weather.py
assets/: style.css
