[project]
name = "Plantly"
version = "0.1.0"
description = "A weather-powered dashboard for plant care decisions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.1.0",
    "numpy>=2.0.0",
    "openmeteo-requests>=1.7.5",
    "pandas>=2.2",
    "plotly>=6.7.0",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
]
